fix: align FEEL runtime and generated code with OMG TCK semantics